syntax = "proto3";
package cylon_engine;

service Engine {
  rpc RunInference (InferenceRequest) returns (InferenceReply);
}

message InferenceRequest {
  repeated Message messages = 1;
}

message InferenceReply {
    string response = 1;
}

message Message {
  string role = 1;
  string content = 2;
}
